--- a/index.html
+++ b/index.html
@@ -44,20 +44,25 @@
         <h2>Course Projects</h2>
         <ol>
             <li>
-                <a href="index.html"></a>
+                <a href="index.html">
                 <h3>Project 1: Jump Page (Looking at it!)</h3>
+                <h4>Feb 14, 2022</h4>
                 <p> My class landing</p>
+            </a>
             </li>
             <li>
                 <h3>Project 2: Image Gallery</h3>
-                <p>custom image carousel</p>
+                <h4>March 3, 2022</h4>
+                <p>Custom image carousel</p>
             </li>
             <li>
                 <h3>Project 3: Media Player</h3>
-                <p>nedia controlled presentation</p>
+                <h4>April 7, 2022</h4>
+                <p>Media controlled presentation</p>
             <li>
                 <h3>Project 4: Web App</h3>
-                <p>Custome Hybrid App</p>
+                <h4>TBA</h4>
+                <p>Custom Hybrid App</p>
             </li>
         </ol>
         </section>
@@ -66,32 +71,43 @@
             <h2>Course Labs</h2>
             <ol>
                 <li>
-                    <h3>Lab 1</h3>
+                    <h3>Lab 1: Page Layout (Flexbox and Grid)</h3>
+                    <h4>Jan 31, 2022</h4>
+                    <p></p>
                 </li>
                 <li>
-                    <h3>Lab 2</h3>
+                    <h3>Lab 2: CSS Transition Animations</h3>
+                    <h4>Feb 7, 2022</h4>
                 </li>
                 <li>
-                    <h3>Lab 3</h3>
+                    <h3>Lab 3: Mouse Events</h3>
+                    <h4>Feb 21, 2022</h4>
                 </li>
                 <li>
-                    <h3>Lab 4</h3>
+                    <h3>Lab 4: Changing the DOM</h3>
+                    <h4>TBA</h4>
                 </li>
                 <li>
-                    <h3>Lab 5</h3>
+                    <h3>Lab 5: Audio and Video</h3>
+                    <h4>TBA</h4>
+                    <p>Adding audio and video to your website</p>
                 </li>
                 <li>
-                    <h3>Lab 6</h3>
+                    <h3>Lab 6: Fetch external data</h3>
+                    <h4>TBA</h4>
+                    <p>Update an entire page without loading the whole page using external data.</p>
                 </li>
                 <li>
-                    <h3>Lab 7</h3>
+                    <h3>Lab 7: Fun with APIs</h3>
+                    <h4>TBA</h4>
+                    <p>Integrating external technologies and services into your applications</p>
                 </li>
                 <li>
-                    <h3>Lab 8</h3>
+                    <h3>Lab 8: Local Storage</h3>
+                    <h4>TBA</h4>
+                    <p>Storing data with no expiration date</p>
                 </li>
-                <li>
-                    <h3>Lab 9</h3>
-                </li>
+
             </ol>
             </section>
     </main>
